# nlc_platform

./: .env.example  .env.render  .gitignore  .renderignore  .vercelignore  BACKUP_DISASTER_RECOVERY.md  DEPLOY.md  DEPLOYMENT_PACKAGE_SUMMARY.md  DEPLOYMENT_PACKAGE_VISUAL.md  DEPLOYMENT_STATUS_COMPLETE.md  Dockerfile  Dockerfile.txt  FLY_DEPLOYMENT_GUIDE.md  FLY_MONITORING_SETUP.md  Makefile  PRODUCTION_DEPLOYMENT_PLAYBOOK.md  QUICK_START_GUIDE.md  README.md  SPEC.md  alembic.ini  copilot-instructions.md  docker-compose.yml  fly.toml  package-lock.json  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  vercel.json
.github/: AGENTS.md
alembic/: env.py  script.py.mako
api/: index.py
app/: main.py
nlc_platform/: .env.example  Dockerfile  Makefile  deta.yml  docker-compose.yml  pyproject.toml  render.yaml
nlc_platform/app/: main.py
nlc_platform/app/api/v1/: admin.py  auth.py  commercial.py  companies.py  documents.py  filings.py  health.py  rescue.py  rules.py
nlc_platform/app/core/: config.py  database.py  dependencies.py  schemas.py  security.py
nlc_platform/app/models/: __init__.py  commercial.py  company.py  compliance.py  document.py  filing.py  notification.py  rescue.py  user.py
nlc_platform/app/rule_engine/: __init__.py  engine.py
nlc_platform/app/services/: auth_service.py
nlc_platform/app/worker/: celery.py  tasks.py
nlc_platform/tests/: test_rule_engine.py  test_security.py
scripts/: backup_to_s3.sh  deployment_checklist.sh  seed_prompt_templates.py  seed_rules.py  setup_vercel_env.sh
tests/: conftest.py
(+62 files in other folders)
